# ggadt

./: .allowed_ngrid_values  .buildinfo  .defaults.in  .dropbox  .gitignore  AUTHORS  CNAME  ChangeLog  Concept-index.html  Example-usage.html  FFT-comparison.html  GNU-Free-Documentation-License.html  INSTALL  Installation.html  Invoking-GGADT.html  Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.mac  Overview.html  README  README.md  README_dev  README_dev.md  Testing-against-previous-results.html  aclocal.m4  additional_files.html  adt.html  agglomerate.html  batch.sh  bruces_spheres_BA1024.1.targ  calladt.out  citations.html  cleandist-custom.sh  common.f03  common_mod.mod  conf25522  config.status  configure  (+62 more)
_sources/: additional_files.txt  adt.txt  agglomerate.txt  citations.txt  conventions.txt  custom.txt  diffscat.txt  ellipsoids.txt  example.txt  glossary.txt  index.txt  install.txt  invoking.txt  multiple_compositions.txt  options.txt  sphere.txt  whats_new.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
data/: bruces_spheres_BA32.1.targ  default.params.in  parameterfile-sphere.ini  silicate.mat
data/clusters/: BA.1024.1.targ  BA.1024.10.targ  BA.1024.11.targ  BA.1024.12.targ  BA.1024.13.targ  BA.1024.14.targ  BA.1024.15.targ  BA.1024.16.targ  BA.1024.2.targ  BA.1024.3.targ  BA.1024.4.targ  BA.1024.5.targ  BA.1024.6.targ  BA.1024.7.targ  BA.1024.8.targ  BA.1024.9.targ  BA.128.1.targ  BA.128.10.targ  BA.128.11.targ  BA.128.12.targ  BA.128.13.targ  BA.128.14.targ  BA.128.15.targ  BA.128.16.targ  BA.128.2.targ  BA.128.3.targ  BA.128.4.targ  BA.128.5.targ  BA.128.6.targ  BA.128.7.targ  BA.128.8.targ  BA.128.9.targ  BA.16.1.targ  BA.16.10.targ  BA.16.11.targ  BA.16.12.targ  BA.16.13.targ  BA.16.14.targ  BA.16.15.targ  BA.16.16.targ  (+440 more)
data/exploring_fluffiness/: emt_results.npy
data/materials/: index.Cpa  index.Cpa.DL  index.Cpe  index.Cpe.DL  index.SiC  index.SiC.sav  index.diamIb  index.h2o  index.mdiam  index.sil  index.sil.DL  index.sil.new0  index.sil.sav  index.sil0  index.sil_new  index.sil_new00.07.19  index.sil_newer  index.sil_suv  index_CpaD02  index_CpaD02.sav  index_CpaD03  index_Cpaexp  index_CpeD02  index_CpeD02.sav  index_CpeD03  index_Fe  index_amcAC1_RM91  index_amcACAR_ZMCB96  index_amcACH2  index_amcACH2_ZMCB96  index_amcBE1_RM91  index_amcBE_ZMCB96  index_amcFC21PS_RM91  index_amcHAPS_RM91  index_fe2o3  index_fe3o4  index_pcel600  index_pcel800  index_silD02  index_silD03  (+6 more)
data/paramfiles/: parameterfile-ellipsoid.ini  parameterfile-spheres.ini  parameterfile.ini
data/profiling/: profile-ellipsoid-openmp.txt  profile-ellipsoid-serial.txt  profile-spheres-serial.txt
doc/: .ggadt.texi.swp  Makefile  Makefile.am  Makefile.in  ggadt.aux  ggadt.cp  ggadt.info  ggadt.texi  ggadt.toc  mdate-sh  stamp-vti  texinfo.tex  version.texi
doc/ggadt.html/: Background.html  Benchmarking.html  Concept-index.html  Example-usage.html  GNU-Free-Documentation-License.html  Installation.html  Invoking-GGADT.html  Invoking-ggadt.html  Language.html  Overview.html  Plotting.html  Scientific-relevance.html  index.html
docs/: ggadt_doc.tex
doctrees/: agglomerate.doctree  conventions.doctree  custom.doctree  diffscat.doctree  ellipsoids.doctree  environment.pickle  example.doctree  index.doctree  install.doctree  invoking.doctree  options.doctree  sphere.doctree
example/: BAM1.256.1.targ  README  parameters_diffscat.ini  parameters_diffscat_2d.ini  parameters_total_xs.ini  plot_diffscat.py  plot_diffscat_2d.py  plot_total_xs.py  run.sh
gpfa/: Make.alpha  Make.sgi  Make.sun  Makefile  gpfa.tgz  gpfatest  gpfatest.f  timer.f
html/: .buildinfo  agglomerate.html  conventions.html  custom.html  diffscat.html  ellipsoids.html  example.html  genindex.html  index.html  install.html  invoking.html  objects.inv  options.html  search.html  searchindex.js  sphere.html
lib/: libfftw3.la  libfftw3f.la  libfftw3f_mpi.la  libfftw3f_omp.la  libfftw3f_threads.la
m4/: ac_find_file.m4  lx_find_mpi.m4
modules/: ellipsoid.mod
plans/: plan_nx0512_ny0512_fftw_mode064.plan  plan_nx1024_ny1024_fftw_mode064.plan  plan_nx2048_ny2048_fftw_mode064.plan
scripts/: D03_f7.py  DA06.py  HD09.py  convergence.py  effective_medium_theory.py  error_analysis.py  exploring_fluffiness.py  fluffiness_accuracy.py  heng_and_draine.py  heng_and_draine_fig2a.ini  heng_and_draine_fig2b.ini  heng_and_draine_fig3BA.ini  heng_and_draine_fig3BAM1.ini  heng_and_draine_fig3BAM2.ini  installation_vars.py  installation_vars.py.in  make_sample_plots.py  make_sample_plots.sh  norientations_test.py  plot.py  plot2d.py  plot_thetaphi.py  plot_utilities.py  testing_against_mie_theory.py  testing_multiple_compositions.py  testing_spheres.py  testing_xsect.py  timing.py
src/: Makefile  Makefile.am  Makefile.in  common.f03  common.f03.in  common.f90  common.f90.in  common.f95  common.f95.in  common_mod.mod  constants.f03  constants.f90  constants.f90.in  constants.f95  constants.f95.in  custom.f90  custom.f90.in  cxfft3_mkl_v3.f90  cxfft3n.f90  ddcommon.f90  ddprecision.f90  ellipsoid.f03  ellipsoid.f90  ellipsoid.f95  ellipsoid.mod  f77_wisdom.f  f95_wisdom.f90  fftw.mod  fftwmod.f03  fftwmod.f03.in  fftwmod.f90  fftwmod.f90.in  fftwmod.f95  fftwmod.f95.in  foo.f90  ggadt.f03  ggadt.f03.in  ggadt.f90  ggadt.f90.in  ggadt.f95  (+26 more)
src/combined/: Makefile.am  ggadt.f03  sphere.f03
src/mpi/: Makefile.am  Makefile.in  fftwmod-mpi.f03  ggadt-mpi.f03  spheres-mpi.f03
src/omp/: Makefile  Makefile.am  Makefile.in  common.f03  common_mod.mod  ellipsoid.mod  fftw.mod  fftwmod-omp.f03  fftwmod-omp.f03.in  ggadt-omp.f03  ggadt-omp.f03~  gmon.out  options.mod  profile-spheres.txt  profile.txt  sphere-omp.f03  sphere.mod  spheres-omp.f03  spheres-omp.f03~  spheres.mod
src/serial/: BAM2.1024.1.targ.txt  Makefile  Makefile.am  Makefile.in  common.f03  common_mod.mod  ellipsoid.mod  fftw.mod  fftwmod-serial.f03  fftwmod-serial.f03.in  ggadt-serial.f03  gmon.out  options.mod  profile.txt  sphere.mod  spheres-serial.f03  spheres.mod  test
test/: convergence.py
(+13 files in other folders)
